답변 수정, 추천 후에도 해당 답변으로 스크롤 되게